--- a/app/views/items/index.html.slim
+++ b/app/views/items/index.html.slim
@@ -1,6 +1,6 @@
 - model_class = Item
 div class="page-header"
-  h1=t '.title', :default => model_class.model_name.human.pluralize.titleize
+  h1=t '.title', :default => [:'helpers.titles.index', 'index %{model}'], :model => model_class.model_name.human.titleize
 table class="table table-striped"
   thead
     tr
@@ -38,4 +38,3 @@ table class="table table-striped"
           = link_to t('.destroy', :default => t("helpers.links.destroy")), item_path(item), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs btn-danger'
 
 = link_to t('.new', :default => t("helpers.links.new")), new_item_path, :class => 'btn btn-primary'
-
